project(leetcode)

# [5]
add_executable(LongestPalindromicSubstring LongestPalindromicSubstring.cpp)
# [53]
add_executable(MaximumSubarray MaximumSubarray.cpp)
# [62]
add_executable(UniquePaths UniquePaths.cpp)
# [62]-V2
add_executable(UniquePaths_V2 UniquePaths_V2.cpp)
# [63]
add_executable(UniquePathsII UniquePathsII.cpp)

add_executable(LuoguP1980 LuoguP1980.cpp)