project(leetcode)

add_subdirectory("List100")
add_subdirectory("List101")
add_subdirectory("List102")
add_subdirectory("List103")
add_subdirectory("List104")
add_subdirectory("List105")
add_subdirectory("List106")
add_subdirectory("List107")
add_subdirectory("List108")
add_subdirectory("List109")
add_subdirectory("List110")
add_subdirectory("List111")