project(leetcode)

add_executable(P1001 P1001.cpp)
add_executable(P1000 P1000.cpp)
add_executable(P5703 P5703.cpp)
add_executable(P5704 P5704.cpp)
add_executable(P5705 P5705.cpp)
add_executable(P5706 P5706.cpp)
add_executable(P1425 P1425.cpp)
add_executable(P2433 P2433.cpp)
add_executable(P5708 P5708.cpp)
add_executable(P1421 P1421.cpp)
add_executable(P5709 P5709.cpp)
add_executable(P2181 P2181.cpp)