project(leetcode)

add_executable(P5718 P5718.cpp)
add_executable(P5719 P5719.cpp)
add_executable(P5720 P5720.cpp)
add_executable(P5721 P5721.cpp)
add_executable(P1009 P1009.cpp)
add_executable(P1980 P1980.cpp)
add_executable(P1035 P1035.cpp)
add_executable(P2669 P2669.cpp)
add_executable(P5722 P5722.cpp)
add_executable(P5723 P5723.cpp)
add_executable(P1217 P1217.cpp)
add_executable(P1423 P1423.cpp)
add_executable(P1307 P1307.cpp)
add_executable(P1720 P1720.cpp)
add_executable(P5724 P5724.cpp)
add_executable(P1420 P1420.cpp)
add_executable(P1075 P1075.cpp)
add_executable(P5725 P5725.cpp)
add_executable(P5726 P5726.cpp)
add_executable(P4956 P4956.cpp)
add_executable(P1089 P1089.cpp)