project(leetcode)

add_executable(P1428 P1428.cpp)
add_executable(P1427 P1427.cpp)
add_executable(P5727 P5727.cpp)

add_executable(P1047 P1047.cpp)     # 暴力求解 / 线段树(无惰性标记)
add_executable(P1047_2 P1047_2.cpp) # 线段数(有惰性标记)
add_executable(P1047_3 P1047_3.cpp) # 区间合并思想
add_executable(P1047_4 P1047_4.cpp) # 分块思想

add_executable(P5728 P5728.cpp)
add_executable(P2550 P2550.cpp)
add_executable(P2615 P2615.cpp)
add_executable(P5729 P5729.cpp)
add_executable(P5730 P5730.cpp)
add_executable(P1554 P1554.cpp)
add_executable(P2141 P2141.cpp)
add_executable(P1614 P1614.cpp)
add_executable(P2911 P2911.cpp)
add_executable(P1161 P1161.cpp)
add_executable(P5731 P5731.cpp)
add_executable(P5732 P5732.cpp)
add_executable(P1789 P1789.cpp)