project(leetcode)

add_executable(P5733 P5733.cpp)
add_executable(P1914 P1914.cpp)
add_executable(P1125 P1125.cpp)
add_executable(P1957 P1957.cpp)
add_executable(P5015 P5015.cpp)
add_executable(P5734 P5734.cpp)
add_executable(P1308 P1308.cpp)
add_executable(P1765 P1765.cpp)
add_executable(P3741 P3741.cpp)
add_executable(P1321 P1321.cpp)
add_executable(P1553 P1553.cpp)
add_executable(P1603 P1603.cpp)
add_executable(P1200 P1200.cpp)
add_executable(P1597 P1597.cpp)
add_executable(P1598 P1598.cpp)