project(leetcode)

add_executable(P5735 P5735.cpp)
add_executable(P5736 P5736.cpp)
add_executable(P5737 P5737.cpp)
add_executable(P5738 P5738.cpp)
add_executable(P5739 P5739.cpp)
add_executable(P5461 P5461.cpp)
add_executable(P5740 P5740.cpp)
add_executable(P5741 P5741.cpp)
add_executable(P5742 P5742.cpp)
add_executable(P1304 P1304.cpp)
add_executable(P2415 P2415.cpp)
add_executable(P5743 P5743.cpp)
add_executable(P5744 P5744.cpp)