project(leetcode)

add_executable(P1042 P1042.cpp)
add_executable(P2670 P2670.cpp)
add_executable(P1563 P1563.cpp)
add_executable(P1601 P1601.cpp)
add_executable(P1303 P1303.cpp)
add_executable(P4924 P4924.cpp)
add_executable(P1328 P1328.cpp)

add_executable(P1518 P1518.cpp)
add_executable(P1518_2 P1518_2.cpp)