project(leetcode)

add_executable(P1271 P1271.cpp)
add_executable(P1177 P1177.cpp)
add_executable(P1923 P1923.cpp)
add_executable(P1059 P1059.cpp)
add_executable(P1093 P1093.cpp)
add_executable(P1781 P1781.cpp)
add_executable(P2676 P2676.cpp)
add_executable(P1116 P1116.cpp)
add_executable(P1152 P1152.cpp)
add_executable(P1068 P1068.cpp)
add_executable(P5143 P5143.cpp)
add_executable(P1104 P1104.cpp)
add_executable(P1012 P1012.cpp)