project(leetcode)

add_executable(P2241 P2241.cpp)
add_executable(P2089 P2089.cpp)
add_executable(P1618 P1618.cpp)
add_executable(P1036 P1036.cpp)
add_executable(P1157 P1157.cpp)
add_executable(P1706 P1706.cpp)
add_executable(P1088 P1088.cpp)
add_executable(P3392 P3392.cpp)
add_executable(P3654 P3654.cpp)
add_executable(P1149 P1149.cpp)
add_executable(P3799 P3799.cpp)
add_executable(P2392 P2392.cpp)
add_executable(P2306 P2306.cpp)