project(leetcode)

add_executable(P1255 P1255.cpp)
add_executable(P1002 P1002.cpp)
add_executable(P1044 P1044.cpp)
add_executable(P1028 P1028.cpp)
add_executable(P1464 P1464.cpp)
add_executable(P1928 P1928.cpp)
add_executable(P2437 P2437.cpp)
add_executable(P1164 P1164.cpp)
add_executable(P1990 P1990.cpp)
add_executable(P3612 P3612.cpp)
add_executable(P1259 P1259.cpp)
add_executable(P1010 P1010.cpp)
add_executable(P1228 P1228.cpp)
add_executable(P1498 P1498.cpp)