project(leetcode)

add_executable(P2240 P2240.cpp)
add_executable(P1223 P1223.cpp)
add_executable(P1803 P1803.cpp)
add_executable(P1090 P1090.cpp)
add_executable(P3817 P3817.cpp)
add_executable(P1106 P1106.cpp)
add_executable(P1478 P1478.cpp)
add_executable(P5019 P5019.cpp)
add_executable(P1208 P1208.cpp)
add_executable(P1094 P1094.cpp)
add_executable(P4995 P4995.cpp)
add_executable(P4447 P4447.cpp)
add_executable(P4447_data P4447_data.cpp)
add_executable(P1080 P1080.cpp)