project(leetcode)

add_executable(P2249 P2249.cpp)
add_executable(P1102 P1102.cpp)
add_executable(P1873 P1873.cpp)
add_executable(P1024 P1024.cpp)
add_executable(P1678 P1678.cpp)

add_executable(P2440 P2440.cpp)
add_executable(P2678 P2678.cpp)
add_executable(P3853 P3853.cpp)
add_executable(P1182 P1182.cpp)
add_executable(P1163 P1163.cpp)
add_executable(P3743 P3743.cpp)