project(luogu)

add_executable(P1219 P1219.cpp)
add_executable(P1443 P1443.cpp)
add_executable(P1135 P1135.cpp)
add_executable(P1433 P1433.cpp)
add_executable(P1605 P1605.cpp)
add_executable(P1019 P1019.cpp)
add_executable(P1101 P1101.cpp)
add_executable(P2404 P2404.cpp)
add_executable(P1162 P1162.cpp)
add_executable(P1032 P1032.cpp)
add_executable(P1825 P1825.cpp)
add_executable(P1596 P1596.cpp)
add_executable(P2895 P2895.cpp)