# 数据结构
# 线性表

project(luoguo)

add_executable(P3156 P3156.cpp)
add_executable(P3613 P3613.cpp)
add_executable(P1449 P1449.cpp)
add_executable(P1996 P1996.cpp)
add_executable(P1160 P1160.cpp)
add_executable(P1540 P1540.cpp)
add_executable(P2058 P2058.cpp)
add_executable(P1241 P1241.cpp)
add_executable(P4387 P4387.cpp)
add_executable(P2234 P2234.cpp)
add_executable(P2234_2 P2234_2.cpp) # fhq treap